--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 **.pem
 !/examples/quickstart-vagrant/ansible/roles/nebula/files/vagrant-test-ca.key
 !/examples/quickstart-vagrant/ansible/roles/nebula/files/vagrant-test-ca.crt
+/testdata/
