--- a/.github/workflows/mayhem.yml
+++ b/.github/workflows/mayhem.yml
@@ -48,7 +48,7 @@ jobs:
       with:
         context: .
         push: true
-        file: mayhem/Dockerfile
+        file: mayhem/tests.Dockerfile
         tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.BRANCH_NAME }}
         labels: ${{ steps.meta.outputs.labels }}
 
@@ -63,8 +63,11 @@ jobs:
       fail-fast: false
       matrix:
         mayhemfile:
-          - mayhem/bin-host.Mayhemfile
-          - mayhem/bin-lighthouse.Mayhemfile
+          - mayhem/firewall-addfirewallrulesfromconfig.Mayhemfile
+          - mayhem/firewall-addrule.Mayhemfile
+          - mayhem/firewall-drop.Mayhemfile
+          - mayhem/newfirewall.Mayhemfile
+          - mayhem/newfirewallfromconfig.Mayhemfile
 
     steps:
       - uses: actions/checkout@v4
