--- a/.github/workflows/mayhem.yml
+++ b/.github/workflows/mayhem.yml
@@ -8,7 +8,8 @@ on:
     branches:
       - main
   workflow_dispatch:
-
+  schedule:
+    - cron: '0 7 * * 1'
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
